--- a/emisor.html
+++ b/emisor.html
@@ -77,11 +77,11 @@
         // ==========================================
         // 🤖 CONFIGURACIÓN DE TELEGRAM (¡Pega tus datos aquí!)
         // ==========================================
-        const TELEGRAM_TOKEN = "8565258420:AAHB5CHbTJChcFvyW5FMiZ2Jl_tpnSDM8Ho"; 
-        const TELEGRAM_CHAT_ID = "1156363611";
+        const TELEGRAM_TOKEN = 8565258420:AAHB5CHbTJChcFvyW5FMiZ2Jl_tpnSDM8Ho; 
+        const TELEGRAM_CHAT_ID = 1156363611;
 
         function avisarTelegram(modo) {
-            if (TELEGRAM_TOKEN === "8565258420:AAHB5CHbTJChcFvyW5FMiZ2Jl_tpnSDM8Ho" || !TELEGRAM_CHAT_ID) return;
+            if (TELEGRAM_TOKEN === 8565258420:AAHB5CHbTJChcFvyW5FMiZ2Jl_tpnSDM8Ho || !TELEGRAM_CHAT_ID) return;
             
             let texto = "🚨 ¡ATENCIÓN! ROBO DETECTADO 🚨\n\nTu bicicleta está en movimiento.";
             if (modo === "normal") texto += "\n🤫 (Modo Sigilo: El ladrón no sabe que lo estás viendo).";
