--- a/emisor.html
+++ b/emisor.html
@@ -84,8 +84,8 @@
         // =============================================
         // TELEGRAM — pon aquí tu token y chat_id
         // =============================================
-        const TELEGRAM_TOKEN   = "PON_AQUI_TU_TOKEN";    // ej: 7123456789:AAFxxxxxx
-        const TELEGRAM_CHAT_ID = "PON_AQUI_TU_CHAT_ID";  // ej: 123456789
+        const TELEGRAM_TOKEN   = "8565258420:AAHB5CHbTJChcFvyW5FMiZ2Jl_tpnSDM8Ho";    // ej: 7123456789:AAFxxxxxx
+        const TELEGRAM_CHAT_ID = "1156363611";  // ej: 123456789
 
         let telegramEnviado = false; // evita spam si la alarma persiste
 
